Adding style for active link

--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,8 @@
     background-color: #dff0d8;
     border-color: #d6e9c6;
 }
+
+.filters .active{
+    text-decoration: none;
+    border-bottom: 2px solid red;
+}
